--- a/src/app/news/news.component.css
+++ b/src/app/news/news.component.css
@@ -1,5 +1,5 @@
 .feed-card {
-    margin: 6px auto;
+    margin-bottom: 8px;
     cursor: pointer;
     overflow: hidden;
 }
